tests/suite/manifests/authentication-filter/basic-auth1.yaml
# Basic Auth Secret and AuthenticationFilter
apiVersion: v1
kind: Secret
metadata:
  name: basic-auth1
type: nginx.org/htpasswd
data:
  # Base64 of "htpasswd -bn user1 password1"
  auth: dXNlcjE6JGFwcjEkWEFKeU5yekgkY0Rjdy9YMVBCZTFmTjltQVBweXpxMA==
---
apiVersion: gateway.nginx.org/v1alpha1
kind: AuthenticationFilter
metadata:
  name: basic-auth1
spec:
  type: Basic
  basic:
    secretRef:
      name: basic-auth1
    realm: "Restricted basic-auth1"
