tests/suite/manifests/authentication-filter/basic-invalid-auth.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invalid-cafe-routes
spec:
  parentRefs:
    - name: auth-gateway
  rules:
    # Latte without authentication
    - matches:
        - path:
            type: PathPrefix
            value: /latte
      backendRefs:
        - name: latte
          port: 80
    # Soda with authentication reference from different namespace
    - matches:
        - path:
            type: PathPrefix
            value: /soda
      backendRefs:
        - name: soda
          port: 80
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.nginx.org
            kind: AuthenticationFilter
            name: basic-auth3
    # Tea with Basic Auth with valid basic-auth2
    - matches:
        - path:
            type: PathPrefix
            value: /tea
      backendRefs:
        - name: tea
          port: 80
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.nginx.org
            kind: AuthenticationFilter
            name: basic-auth2
    # Frappe with with two valid basic-auth filters that makes it invalid
    - matches:
        - path:
            type: PathPrefix
            value: /frappe
      backendRefs:
        - name: frappe
          port: 80
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.nginx.org
            kind: AuthenticationFilter
            name: basic-auth1
        - type: ExtensionRef
          extensionRef:
            group: gateway.nginx.org
            kind: AuthenticationFilter
            name: basic-auth2
    # Matcha with not existing AuthFilter
    - matches:
        - path:
            type: PathPrefix
            value: /matcha
      backendRefs:
        - name: matcha
          port: 80
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.nginx.org
            kind: AuthenticationFilter
            name: not-existing-auth
    # Chocolate with invalid key in reference
    - matches:
        - path:
            type: PathPrefix
            value: /chocolate
      backendRefs:
        - name: chocolate
          port: 80
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.nginx.org
            kind: AuthenticationFilter
            name: basic-auth-wrong-key
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpc-route
spec:
  parentRefs:
    - name: auth-gateway
      sectionName: http
  rules:
    - matches:
        - method:
            service: helloworld.Greeter
            method: SayHello
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.nginx.org
            kind: AuthenticationFilter
            name: basic-auth-wrong-key
      backendRefs:
        - name: grpc-backend
          port: 8080
---
# AuthenticationFilters with valid and invalid configurations

# Auth with valid basic-auth1
apiVersion: v1
kind: Secret
metadata:
  name: basic-auth1
type: Opaque
data:
  # Base64 of "htpasswd -bn user1 password1"
  auth: dXNlcjE6JGFwcjEkWEFKeU5yekgkY0Rjdy9YMVBCZTFmTjltQVBweXpxMA==
---
apiVersion: gateway.nginx.org/v1alpha1
kind: AuthenticationFilter
metadata:
  name: basic-auth1
spec:
  type: Basic
  basic:
    secretRef:
      name: basic-auth1
    realm: "Restricted basic-auth1"
---
# Auth with valid basic-auth2
apiVersion: v1
kind: Secret
metadata:
  name: basic-auth2
type: Opaque
data:
  # Base64 of "htpasswd -bn user2 password2"
  auth: dXNlcjI6JGFwcjEkd0lKUUpjZEUkSXUuYjVhMlBGODdtQi5zT0x4aUg5MQ==
---
apiVersion: gateway.nginx.org/v1alpha1
kind: AuthenticationFilter
metadata:
  name: basic-auth2
spec:
  type: Basic
  basic:
    secretRef:
      name: basic-auth2
    realm: "Restricted basic-auth2"
---
# Auth with an invalid key
apiVersion: v1
kind: Secret
metadata:
  name: basic-auth-wrong-key
type: Opaque
data:
  # Base64 of "htpasswd -bn user2 password2"
  creds: dXNlcjI6JGFwcjEkd0lKUUpjZEUkSXUuYjVhMlBGODdtQi5zT0x4aUg5MQ==
---
apiVersion: gateway.nginx.org/v1alpha1
kind: AuthenticationFilter
metadata:
  name: basic-auth-wrong-key
spec:
  type: Basic
  basic:
    secretRef:
      name: basic-auth-wrong-key
    realm: "Restricted basic-auth-wrong-key"
