tests/suite/manifests/authentication-filter/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: auth-gateway
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: "*.example.com"
  - name: https
    port: 443
    protocol: HTTPS
    hostname: cafe.example.com
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: cafe-tls-secret
