tests/suite/manifests/authentication-filter/jwt-valid-auth.yaml
---
apiVersion: gateway.nginx.org/v1alpha1
kind: AuthenticationFilter
metadata:
  name: jwt-auth-file
spec:
  type: JWT
  jwt:
    realm: "JWT Authentication"
    source: File
    file:
      secretRef:
        name: jwks-secret
    keyCache: 10m
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jwt-cafe-routes
spec:
  parentRefs:
    - name: auth-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /jwt-coffee
      backendRefs:
        - name: coffee
          port: 80
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.nginx.org
            kind: AuthenticationFilter
            name: jwt-auth-file
