tests/suite/manifests/authentication-filter/keycloak-realm-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: keycloak-realm-config
data:
  # yamllint disable
  myrealm.json: |
    {
      "realm": "myrealm",
      "enabled": true,
      "verifyEmail": false,
      "loginWithEmailAllowed": true,
      "registrationEmailAsUsername": false,
      "clients": [
        {
          "clientId": "cafe-app",
          "enabled": true,
          "publicClient": true,
          "directAccessGrantsEnabled": true,
          "standardFlowEnabled": true
        }
      ],
      "users": [
        {
          "username": "testuser",
          "enabled": true,
          "email": "testuser@example.com",
          "emailVerified": true,
          "firstName": "Test",
          "lastName": "User",
          "credentials": [
            {
              "type": "password",
              "value": "testpassword",
              "temporary": false
            }
          ]
        }
      ]
    }
